<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="maximumPDOP"
        android:defaultValue="@string/pref_default_maximum_pdop"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_maximum_pdop" />

    <EditTextPreference
        android:key="maximumAccuracy"
        android:defaultValue="@string/pref_default_maximum_accuracy"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_maximum_accuracy" />

    <EditTextPreference
        android:key="ssid"
        android:defaultValue="@string/pref_default_ssid"
        android:inputType="text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_ssid" />

    <EditTextPreference
        android:key="channel"
        android:defaultValue="@string/pref_default_channel"
        android:inputType="number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_channel" />

</PreferenceScreen>
