<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_phone_identity"
        android:editable="true"
        android:inputType="none"
        android:key="phoneIdentity"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_phone_identity" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_grid_size_meters"
        android:editable="true"
        android:inputType="numberDecimal"
        android:key="gridSizeMeters"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_grid_size_meters" />

</PreferenceScreen>
